# multi-ai-agents-for-sentiment-analysis

./: .env.a2a_example  .gitignore  A2A_QUICKSTART.md  API_DOCUMENTATION.md  BaoCao_KLTN_3Phan.md  INTEGRATION_SUMMARY.md  README.md  a2a_server.py  app.py  app_a2a.py  config.json  data_integration.py  data_pipeline.py  demo_a2a_comparison.py  demo_enhanced_system.py  demo_langchain_system.py  demo_langchain_system_summary.py  description.txt  enhanced_a2a_server.py  integrated_data_pipeline.py  langxmanual  main.py  pyproject.toml  quick_langgraph_demo.py  requirements.txt  sample_output  system_idea.txt  test.ipynb  test_a2a_workflow.py  test_chat_system.py  test_enhanced_system.py  test_langgraph_system.py  test_system.py  visualize_langgraph.py  workflow_manager.py  Đề cương KLTN.docx
.well-known/: agent.json
agents/: analyzer.py  analyzers.py  conversational_agent.py  coordinator.py  enhanced_coordinator.py  gpt_handler.py  langgraph_coordinator.py  memory_manager.py  memory_utils.py  personas.json  preprocessing.py  preprocessor.py  product_prompts.py  report.py  reporter.py  response_agent.py  scraper.py  sentiment_agents.py
charts/: sentiment_report.txt
data/: sample_reviews.py
data_pipeline/: __init__.py  config.py  package_init.py  pipeline.py  preprocessor.py  scraper.py  scrapers.py  utils.py
docs/: API_DOCUMENTATION.md  INSTALLATION.md  INTEGRATION_SUMMARY.md  KLTN_BaoCao_ChiTiet.md  LANGGRAPH_SETUP.md  README_3_LAYER_SYSTEM.md  USER_GUIDE.md
evaluation/: README.md  README_simple.md  challenging_analysis.py  compare_manual_vs_langchain.py  result  (+14 more)
(+77 files in other folders)
